bk_ida/gobmkida/c3/reading_cache_init
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/reading_cache_init/src/engine/cache.c:1032:38: error: use of undeclared identifier 'loc_493E00'
v2 = ( Hashnode **)malloc( ( size_t)&loc_493E00); 
                                     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/reading_cache_init/src/engine/cache.c:1062:26: error: use of undeclared identifier 'loc_493E00'
memset( v3, 0, ( size_t)&loc_493E00); 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/reading_cache_init/src/obj/1/cache.o] Error 1
